# matrix-canonical-json-rs

./: Cargo.toml  README.md
benches/: serialize.rs
src/: error.rs  formatter.rs  lib.rs  map_key.rs  serializer.rs
