[package]
name = "matrix-canonical-json"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.115"
itoa = "0.4.6"
ryu = "1.0.5"

[dev-dependencies]
serde_derive = "1.0.115"
serde_json = "1.0.57"
criterion = "0.3.3"

[dev-dependencies.ruma]
git = "https://github.com/ruma/ruma"
features = ["client-api"]
rev = "eab5368edd96ef1ff23e37f7a6dfb6cfb327ad47"

[[bench]]
name = "serialize"
harness = false